<resources>
    <string name="app_name">Labo01_Calculatrice</string>
    <string name="effacer">CE</string>
    <string name="effacerTout">C</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="egal">=</string>
    <string name="retour">←</string>
    <string name="signe">±</string>
    <string name="racine">√</string>
    <string name="pourcent">%</string>
    <string name="inverse">1/x</string>
    <string name="virgule">.</string>
</resources>
