<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtExpression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/txtResultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="60dp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"/>

    <GridLayout
        android:id="@+id/grille"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:columnCount="5"
        android:rowCount="5"
        android:useDefaultMargins="false">


        <!-- Première rangée -->
        <Button
            android:id="@+id/btnRetour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/retour"
            android:textSize="25dp"
            android:background="@drawable/bouton_operations"/>
        <Button
            android:id="@+id/btnEffacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/effacer"
            android:textSize="25dp"
            android:background="@drawable/bouton_effacer"/>
        <Button
            android:id="@+id/btnEffacerTout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/effacerTout"
            android:textSize="25dp"
            android:background="@drawable/bouton_effacer" />
        <Button
            android:id="@+id/btnSigne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/signe"
            android:textSize="25dp"
            android:background="@drawable/bouton_operations"/>
        <Button
            android:id="@+id/btnRacine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/racine"
            android:textSize="25dp"
            android:background="@drawable/bouton_operations"/>

        <!-- Deuxième rangée -->
        <Button
            android:id="@+id/btnSept"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/sept"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnHuit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/huit"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnNeuf"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/neuf"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnDivi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/divi"
            android:textSize="25dp"
            android:background="@drawable/bouton_arith"/>
        <Button
            android:id="@+id/btnPourcent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/pourcent"
            android:textSize="25dp"
            android:background="@drawable/bouton_operations"/>

        <!-- Troisième rangée -->
        <Button
            android:id="@+id/btnQuatre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/quatre"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnCinq"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/cinq"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/six"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnMulti"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/multi"
            android:textSize="25dp"
            android:background="@drawable/bouton_arith"/>
        <Button
            android:id="@+id/btnInverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/inverse"
            android:textSize="25dp"
            android:background="@drawable/bouton_operations"/>

        <!-- Quatrième rangée -->
        <Button
            android:id="@+id/btnUn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/un"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>

        <Button
            android:id="@+id/btnDeux"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/deux"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnTrois"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/trois"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>
        <Button
            android:id="@+id/btnMoins"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/moins"
            android:textSize="25dp"
            android:background="@drawable/bouton_arith"/>

        <Button
            android:id="@+id/btnEgal"
            android:layout_rowSpan="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_vertical"
            android:text="@string/egal"
            android:textSize="25dp"
            android:background="@drawable/bouton_egal"/>

        <!-- Dernière rangée -->
        <Button
            android:id="@+id/btnZero"
            android:layout_columnSpan="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/zero"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>

        <Button
            android:id="@+id/btnVirgule"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/virgule"
            android:textSize="25dp"
            android:background="@drawable/bouton_nombre"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/plus"
            android:textSize="25dp"
            android:background="@drawable/bouton_arith"/>
    </GridLayout>
</LinearLayout>